welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:12: error: not found: type gray
      setCouleurBrosse(c:gray)
                         ^SlugTracking:12: error: not found: value c
      setCouleurBrosse(c:gray)
                       ^SlugTracking:23: error: type mismatch;
 found   : Unit
 required: Boolean
  return
  ^